Fix a deprecated constructor in Type.java